Update all the projects to Swift 2.1

--- a/tutorials/WritingPlist/WritingPlist/Settings.bundle/Root.plist
+++ b/tutorials/WritingPlist/WritingPlist/Settings.bundle/Root.plist
@@ -14,7 +14,7 @@
 			<key>Key</key>
 			<string>coredataEnabled</string>
 			<key>DefaultValue</key>
-			<true/>
+			<false/>
 		</dict>
 	</array>
 </dict>
